--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.15.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
@@ -17,7 +17,11 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.54.3",
     "slick-carousel": "^1.8.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "fs": false
   },
   "scripts": {
     "start": "react-scripts start",
