--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -12,6 +13,7 @@
     "firebase": "^9.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
@@ -21,7 +23,8 @@
     "sass": "^1.54.3",
     "slick-carousel": "^1.8.1",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "browser": {
     "fs": false
